feat; add initial auth
